scripts/nullness/wpi/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8.txt
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Board.java:51: error: (argument) $$ 4 $$ arg1 $$ Map.put $$ null (NullType) $$ @Initialized @NonNull BoardObject $$ ( 1534, 1538 ) $$ incompatible argument for parameter arg1 of Map.put.
        objects.put(position, null);
                              ^
  found   : null (NullType)
  required: @Initialized @NonNull BoardObject
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:61: error: (argument) $$ 4 $$ arg1 $$ Map.put $$ null (NullType) $$ @Initialized @NonNull Position $$ ( 2028, 2032 ) $$ incompatible argument for parameter arg1 of Map.put.
        previousPosition.put(from, null);
                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Position
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:64: error: (argument) $$ 4 $$ position $$ BoardTopology.getAdjacentPositions $$ @Initialized @Nullable Position $$ @Initialized @NonNull Position $$ ( 2211, 2218 ) $$ incompatible argument for parameter position of BoardTopology.getAdjacentPositions.
            for (Position adjacentPosition : boardTopology.getAdjacentPositions(current)) {
                                                                                ^
  found   : @Initialized @Nullable Position
  required: @Initialized @NonNull Position
3 errors
